# atemd

./: .gitignore  CMakeLists.txt
debian/: atemd@.service  changelog  control  copyright  rules
src/: atemd.cpp  atemd.hpp  connection.hpp  main.cpp  server.hpp
win/: service.cpp  service.hpp
